[package]
name = "wyrtloom-dashboard-api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
wyrtloom-core         = { path = "../wyrtloom/crates/core" }
# git fallback for wyrtloom-core (path takes precedence when the sibling checkout exists):
# wyrtloom-core       = { git = "https://github.com/codepilots/wyrtloom", package = "wyrtloom-core" }
plugin-kanban-sqlite  = { path = "../wyrtloom/crates/plugin-kanban-sqlite" }
plugin-logger-sqlite  = { path = "../wyrtloom/crates/plugin-logger-sqlite" }
wyrtloom-store-sqlite = { path = "../wyrtloom-store-sqlite" }
wyrtloom-users        = { path = "../wyrtloom-users" }
wyrtloom-clientauth-tofu = { path = "../wyrtloom-clientauth-tofu" }
wyrtloom-config       = { path = "../wyrtloom-config" }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit", "trace", "set-header"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
http-body-util = "0.1"
